--- a/Proyecto_1_Diseno/templates/frontend.html
+++ b/Proyecto_1_Diseno/templates/frontend.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Real-time Coordinate Tracker Oliver</title>
+    <title>Real-time Coordinate Tracker Pv2</title>
     <style>
         body {
             font-family: 'Courier New', monospace;
