--- a/Proyecto_1_Diseno/templates/frontend.html
+++ b/Proyecto_1_Diseno/templates/frontend.html
@@ -95,7 +95,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>Real-time Coordinate {{ name }}</h1>
+        <h1>Real-time Coordinate Tracker {{ name }}</h1>
 
         <div id="navigationTabs" class="navigation-tabs" style="display: none;">
             <div style="width: 100%; margin-bottom: 10px; color: #ffffff;">
@@ -197,7 +197,7 @@
                         const tab = document.createElement('a');
                         tab.className = 'nav-tab';
                         tab.textContent = name;
-                        tab.href = `https://${name}.tumaquinaya.com`;
+                        tab.href = `http://${name}.tumaquinaya.com`;
                         tab.target = '_self';
                         navigationContainer.appendChild(tab);
                     });
