Update navigation tab links to use HTTPS protocol for improved security

--- a/Proyecto_1_Diseno/templates/frontend.html
+++ b/Proyecto_1_Diseno/templates/frontend.html
@@ -196,7 +196,7 @@
                         tab.style.cursor = 'default';
                         tab.removeAttribute('href');
                     } else {
-                        tab.href = `http://${name}.tumaquinaya.com`;
+                        tab.href = `https://${name}.tumaquinaya.com`;
                         tab.target = '_self';
                     }
                     
