--- a/Web-server-UDP-main/Proyecto_1_Diseno/templates/frontend.html
+++ b/Web-server-UDP-main/Proyecto_1_Diseno/templates/frontend.html
@@ -45,6 +45,8 @@
             color: #00ff00;
         }
     </style>
+    <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css"/>
+    <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
 </head>
 <body>
     <div class="container">
@@ -60,6 +62,9 @@
                 <span id="lastUpdate" class="value">Never</span>
             </div>
         </div>
+
+        <h2>Ubicación</h2>
+        <div id="map" style="height: 500px; width: 100%;"></div>
 
         <div class="coordinates">
             <h2>Current Position</h2>
@@ -141,5 +146,31 @@
         // Initial fetch
         fetchCoordinates();
     </script>
+    <script>
+        var map = L.map('map').setView([11.0, -74.8], 13);
+
+        L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
+        attribution: '&copy; OpenStreetMap contributors'
+        }).addTo(map);
+
+        var marker = L.marker([11.0, -74.8]).addTo(map);
+
+        function actualizarPosicion() {
+        fetch("http://34.230.160.177:5000/coordenadas")
+            .then(res => res.json())
+            .then(data => {
+            var lat = data.lat;
+            var lon = data.lon;
+
+            marker.setLatLng([lat, lon]);
+            map.setView([lat, lon], 15);
+            })
+            .catch(err => console.error("Error obteniendo coordenadas:", err));
+        }
+
+       // actualizarPosicion();
+       // setInterval(actualizarPosicion, 10000);
+    </script>
+
 </body>
 </html>
