--- a/Proyecto_1_Diseno/templates/frontend.html
+++ b/Proyecto_1_Diseno/templates/frontend.html
@@ -95,7 +95,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>Real-time Coordinate Tracker wawawawa {{ name }}</h1>
+        <h1>Real-time Coordinate Tracker {{ name }}</h1>
 
         <div id="navigationTabs" class="navigation-tabs" style="display: none;">
             <div style="width: 100%; margin-bottom: 10px; color: #ffffff;">
