Testing format error coordinates in historico/<fecha>, just renamed pop ups to identify error

--- a/Proyecto_1_Diseno/templates/frontend.html
+++ b/Proyecto_1_Diseno/templates/frontend.html
@@ -377,7 +377,7 @@
                     const data = await response.json();
                     mostrarHistorico(data);
                 } else {
-                    alert('No hay datos para esa fecha');
+                    alert('Fallos fecha 1');
                 }
             } catch (error) {
                 alert('Error al consultar histórico');
@@ -391,7 +391,7 @@
             }
 
             if (coordenadas.length === 0) {
-                alert('No hay datos para esa fecha');
+                alert('Fallos fecha 2');
                 return;
             }
 
